<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".actividades.RegistroActivity"
    android:background="@color/c50">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/c50">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/form3"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Crear Cuenta"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_marginTop="40dp"
                android:layout_marginStart="20dp"
                android:src="@drawable/baseline_person_add_24"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="25dp"
                    android:backgroundTint="@color/c50"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingHorizontal="15dp"
                        android:paddingVertical="10dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginBottom="4dp"
                            android:text="@string/TxtNombres"
                            android:textColor="@color/c900"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            app:hintEnabled="false">

                            <EditText
                                android:id="@+id/regTxtNombre"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginBottom="15dp"
                                android:background="@drawable/custom_edittext"
                                android:drawableTint="@color/c900"
                                android:ems="10"
                                android:hint="@string/rygTxtNombre"
                                android:inputType="text"
                                android:padding="12dp"
                                android:textColor="@color/c950"
                                android:textSize="18sp" />
                        </com.google.android.material.textfield.TextInputLayout>


                        <!--2-->
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginBottom="4dp"
                            android:text="@string/TxtApellidos"
                            android:textColor="@color/c900"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            app:hintEnabled="false">

                            <EditText
                                android:id="@+id/regTxtApellido"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginBottom="15dp"
                                android:background="@drawable/custom_edittext"
                                android:drawableTint="@color/c900"
                                android:hint="@string/rygTxtApellido"
                                android:inputType="text"
                                android:padding="12dp"
                                android:textColor="@color/c950"
                                android:textSize="18sp" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <!--3-->
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginBottom="4dp"
                            android:text="@string/TxtCorreo"
                            android:textColor="@color/c900"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            app:hintEnabled="false">

                            <EditText
                                android:id="@+id/regTxtCorreo"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginBottom="15dp"
                                android:background="@drawable/custom_edittext"
                                android:drawableTint="@color/c900"
                                android:hint="@string/rygTxtCorreo"
                                android:inputType="textEmailAddress"
                                android:padding="12dp"
                                android:textColor="@color/c950"
                                android:textSize="18sp" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <!--4-->
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginBottom="4dp"
                            android:text="@string/TxtContraseña"
                            android:textColor="@color/c900"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            app:hintEnabled="false"
                            app:passwordToggleEnabled="true"> <!-- Desactiva la etiqueta flotante -->

                            <EditText
                                android:id="@+id/regTxtPass"
                                android:layout_width="match_parent"
                                android:layout_height="50dp"
                                android:layout_marginBottom="15dp"
                                android:background="@drawable/custom_edittext"
                                android:drawableTint="@color/c900"
                                android:hint="@string/rygTxtContraseña"
                                android:inputType="textPassword"
                                android:padding="12dp"
                                android:textColor="@color/c950"
                                android:textSize="18sp" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginBottom="4dp"
                            android:text="@string/TxtConfirmar"
                            android:textColor="@color/c900"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            app:hintEnabled="false"
                            app:passwordToggleEnabled="true">

                            <EditText
                                android:id="@+id/regTxtConfPass"
                                android:layout_width="match_parent"
                                android:layout_height="50dp"
                                android:layout_marginBottom="25dp"
                                android:background="@drawable/custom_edittext"
                                android:drawableTint="@color/c900"
                                android:hint="@string/rygTxtConfirma"
                                android:inputType="textPassword"
                                android:padding="12dp"
                                android:textColor="@color/c950"
                                android:textSize="18sp" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <!---botones-->

                        <Button
                            android:id="@+id/regBtnRegistrar"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"

                            android:layout_marginBottom="10dp"
                            android:background="@drawable/custom_button"
                            android:text="@string/BtnRegistrar"
                            android:textAllCaps="false"
                            android:textColor="@color/white"
                            android:textSize="18sp" />

                        <Button
                            android:id="@+id/regBtnIniciarSesion"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="@drawable/button_border"
                            android:text="@string/BtnIngresar"
                            android:textAllCaps="false"
                            android:textColor="@color/c900"
                            android:textSize="18sp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>