<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragmentos.CitaFragment">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:background="@drawable/background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="18dp"
                        android:layout_marginBottom="5dp"
                        android:gravity="start"
                        android:text="@string/textViewTituloFrag"
                        android:textColor="@color/white"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/textViewTituloDescFrag"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/linaerLayoutBlock1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="24dp"
                app:layout_constraintTop_toBottomOf="@id/constraintLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">
                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:src="@drawable/logo1" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_list"
                    android:orientation="vertical"
                    android:paddingHorizontal="30dp"
                    android:paddingVertical="16dp"
                    android:layout_marginBottom="16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginBottom="4dp"
                        android:text="Nombres"
                        android:textColor="@color/c900"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:hintEnabled="false"> <!-- Desactiva la etiqueta flotante -->

                        <EditText
                            android:id="@+id/regTxtNombre"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginBottom="15dp"
                            android:background="@drawable/custom_edittext"
                            android:drawableTint="@color/c900"
                            android:ems="10"
                            android:hint="@string/regTxtNombre"
                            android:inputType="text"
                            android:padding="12dp"
                            android:textColor="@color/c950"
                            android:textSize="18sp" />
                    </com.google.android.material.textfield.TextInputLayout>


                    <!--2-->
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginBottom="4dp"
                        android:text="Apellidos"
                        android:textColor="@color/c900"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:hintEnabled="false"> <!-- Desactiva la etiqueta flotante -->

                        <EditText
                            android:id="@+id/regTxtApellido"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginBottom="15dp"
                            android:background="@drawable/custom_edittext"
                            android:drawableTint="@color/c900"
                            android:hint="Ingresa tu Apellido"
                            android:inputType="text"
                            android:padding="12dp"
                            android:textColor="@color/c950"
                            android:textSize="18sp" />
                    </com.google.android.material.textfield.TextInputLayout>
                    <!--2-->
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginBottom="4dp"
                        android:text="Selecciona Barbero"
                        android:textColor="@color/c900"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <Spinner
                        android:id="@+id/spinner_barberos"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="0dp"
                        android:layout_marginBottom="15dp"
                        android:background="@drawable/background_spiner"
                        android:drawablePadding="8dp"
                        android:padding="12dp"
                        android:spinnerMode="dropdown" />


                    <!--2-->
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginBottom="4dp"
                        android:text="Selecciona Servicio"
                        android:textColor="@color/c900"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <Spinner
                        android:id="@+id/spinner_servicio"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="0dp"
                        android:layout_marginBottom="15dp"
                        android:background="@drawable/background_spiner"
                        android:drawablePadding="8dp"
                        android:padding="12dp"
                        android:spinnerMode="dropdown" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <!---botones-->
                        <Button
                            android:id="@+id/btnRegresar"
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:background="@drawable/background_list"
                            android:layout_weight="1"
                            android:text="Regresar"
                            android:textAllCaps="false"
                            android:textColor="@color/c950"
                            android:textSize="16sp"
                            android:drawableStart="@drawable/baseline_arrow_back_24"
                            android:drawableTint="@color/gris"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="0dp"
                            android:paddingStart="16dp"
                            android:layout_marginEnd="20dp"
                            android:layout_gravity="start"
                            />

                        <Button
                            android:id="@+id/btnContinuar"
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:background="@drawable/custom_edittext"
                            android:layout_weight="1"
                            android:text="Continuar"
                            android:textAllCaps="false"
                            android:textColor="@color/c950"
                            android:textSize="16sp"
                            android:drawableEnd="@drawable/baseline_east_24"
                            android:drawableTint="@color/gris"
                            android:layout_marginBottom="0dp"
                            android:layout_marginTop="10dp"
                            android:paddingEnd="14dp"
                            android:layout_gravity="end"
                            />

                    </LinearLayout>


                </LinearLayout>

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</FrameLayout>